apps/gcp/ci-dashboard/tests/scheduling-policy/legacy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-dashboard
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ci-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ci-dashboard
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: cloud.google.com/machine-family
                    operator: In
                    values: [t2d, n2d, e2]
                  - key: cloud.google.com/gke-provisioning
                    operator: NotIn
                    values: ["spot"]
      containers:
        - name: ci-dashboard
          image: ghcr.io/pingcap-qe/ee-apps/ci-dashboard:test
      nodeSelector:
        kubernetes.io/arch: amd64
